fx2j-parser/src/test/resources/element/valid/root.fxml
<?import javafx.scene.layout.VBox?>
<fx:root xmlns:fx="http://javafx.com/fxml" type="javafx.scene.layout.VBox"/>