fx2j-parser/src/test/resources/element/invalid/property-elements.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <children>
        <alignment/>
    </children>
</VBox>